fixed bugs and added README

--- a/index.html
+++ b/index.html
@@ -31,16 +31,20 @@
           alt="Оно тебе надо"
         />
       </a>
-      <address class="address header__address">
-        <li class="address__item">
-          <a href="tel:+99995555555" class="address__link">+9 999 555 5555 </a>
-        </li>
-        <li class="address__item">
-          <a href="mailto:info@sobaka.ge" class="address__link"
-            >info@sobaka.ge
-          </a>
-        </li>
-        <li class="address__item">наб. Принсенграхт 263- 265, Амстердам</li>
+      <address class="address">
+        <ul class="header__address">
+          <li class="address__item">
+            <a href="tel:+99995555555" class="address__link"
+              >+9 999 555 5555
+            </a>
+          </li>
+          <li class="address__item">
+            <a href="mailto:info@sobaka.ge" class="address__link"
+              >info@sobaka.ge
+            </a>
+          </li>
+          <li class="address__item">наб. Принсенграхт 263- 265, Амстердам</li>
+        </ul>
       </address>
     </header>
     <main>
@@ -147,16 +151,20 @@
       </section>
     </main>
     <footer class="footer">
-      <address class="address footer__address">
-        <li class="address__item">
-          <a href="tel:+99995555555" class="address__link">+9 999 555 5555 </a>
-        </li>
-        <li class="address__item">
-          <a href="mailto:info@sobaka.ge" class="address__link"
-            >info@sobaka.ge
-          </a>
-        </li>
-        <li class="address__item">наб. Принсенграхт 263- 265, Амстердам</li>
+      <address class="address">
+        <ul class="footer__address">
+          <li class="address__item">
+            <a href="tel:+99995555555" class="address__link"
+              >+9 999 555 5555
+            </a>
+          </li>
+          <li class="address__item">
+            <a href="mailto:info@sobaka.ge" class="address__link"
+              >info@sobaka.ge
+            </a>
+          </li>
+          <li class="address__item">наб. Принсенграхт 263- 265, Амстердам</li>
+        </ul>
       </address>
       <nav class="footer__menu">
         <ul class="footer__links-list">
