--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <nav class="header__menu">
         <ul class="header__links-list">
           <li class="header__links-list-item">
-            <a class="header__link_active">главная</a>
+            <a class="header__link header__link_active">главная</a>
           </li>
           <li class="header__links-list-item">
             <a class="header__link" href="#lots">посмотреть лоты</a>
@@ -31,20 +31,14 @@
           alt="Оно тебе надо"
         />
       </a>
-      <address class="address">
-        <ul class="header__address">
-          <li class="address__item">
-            <a href="tel:+99995555555" class="address__link"
-              >+9 999 555 5555
-            </a>
-          </li>
-          <li class="address__item">
-            <a href="mailto:info@sobaka.ge" class="address__link"
-              >info@sobaka.ge
-            </a>
-          </li>
-          <li class="address__item">наб. Принсенграхт 263- 265, Амстердам</li>
-        </ul>
+      <address class="header__address">
+        <a href="tel:+99995555555" class="address__item address__link"
+          >+9 999 555 5555
+        </a>
+        <a href="mailto:info@sobaka.ge" class="address__item address__link"
+          >info@sobaka.ge
+        </a>
+        <p class="address__item">наб. Принсенграхт 263- 265, Амстердам</p>
       </address>
     </header>
     <main>
@@ -151,25 +145,19 @@
       </section>
     </main>
     <footer class="footer">
-      <address class="address">
-        <ul class="footer__address">
-          <li class="address__item">
-            <a href="tel:+99995555555" class="address__link"
-              >+9 999 555 5555
-            </a>
-          </li>
-          <li class="address__item">
-            <a href="mailto:info@sobaka.ge" class="address__link"
-              >info@sobaka.ge
-            </a>
-          </li>
-          <li class="address__item">наб. Принсенграхт 263- 265, Амстердам</li>
-        </ul>
+      <address class="footer__address">
+        <a href="tel:+99995555555" class="address__item address__link"
+          >+9 999 555 5555
+        </a>
+        <a href="mailto:info@sobaka.ge" class="address__item address__link"
+          >info@sobaka.ge
+        </a>
+        <p class="address__item">наб. Принсенграхт 263- 265, Амстердам</p>
       </address>
       <nav class="footer__menu">
         <ul class="footer__links-list">
           <li class="footer__links-list-item">
-            <a class="footer__link_active">главная</a>
+            <a class="footer__link footer__link_active">главная</a>
           </li>
           <li class="footer__links-list-item">
             <a class="footer__link" href="#lots">посмотреть лоты</a>
